# emotion-detection-action

./: .gitignore  README.md  combine.py  compute.env.example  pyproject.toml
examples/: basic_usage.py  batch_processing.py  neural_stream_demo.py  realtime_multimodal.py  realtime_webcam.py  robot_handlers.py
scripts/: remote.sh  scan_corrupt_videos.py  startup.yaml  train_fusion_mlp.py  upload_data.py  vm_bootstrap.sh
src/emotion_detection_action/: __init__.py
src/emotion_detection_action/actions/: base.py  http_handler.py  logging_handler.py  ros_handler.py  serial_handler.py
src/emotion_detection_action/core/: __init__.py  config.py  detector.py  inference_worker.py  types.py
src/emotion_detection_action/detection/: attention.py  face.py  voice.py
src/emotion_detection_action/emotion/: __init__.py  facial.py  fusion.py  learned_fusion.py  smoothing.py  speech.py  two_tower_transformer.py
src/emotion_detection_action/inputs/: audio.py  base.py  video.py
src/emotion_detection_action/models/: __init__.py  backbones.py  base.py  fusion.py  registry.py
src/emotion_detection_action/models/vla/: __init__.py  base.py  openvla.py
src/emotion_detector/core/: config.py
src/emotion_detector/emotion/: facial.py  speech.py
tests/: conftest.py
tests/test_actions/: test_handlers.py
tests/test_core/: test_config.py  test_detector.py  test_inference_worker.py  test_types.py
tests/test_detection/: test_face.py
tests/test_emotion/: test_fusion.py  test_learned_fusion.py  test_smoothing.py  test_two_tower_transformer.py
tests/test_integration/: test_pipeline.py
tests/test_models/: test_backbones.py  test_fusion.py  test_registry.py
training/: calibrate_temperature.py  common.py  reset_model.py  train_phase1.py  train_phase2.py
